2024-01-28T01:09:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7682382955 # 63
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
* notice: last 14d: unq all: 7 4124
* notice: prev accum: outdated-unq outdated-all / unq all: 1891 182229 / 1922 186630
* notice: next accum: outdated-unq outdated-all / unq all: 1892 182527 / 1923 186726
* notice: prev exec diff / last date diff / accum: unq all: +1 +96 -0 -75 / +3 +302 -0 -0 / 3 302
* notice: removed / changed dates: [2024-01-13] / [2024-01-14 2024-01-27]

2024-01-27T16:16:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7679769427 # 62
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
* notice: last 14d: unq all: 6 4143
* notice: prev accum: outdated-unq outdated-all / unq all: 1891 182229 / 1922 186536
* notice: next accum: outdated-unq outdated-all / unq all: 1891 182229 / 1922 186630
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -92 / +2 +206 -0 -0 / 2 206
* notice: removed / changed dates: [] / [2024-01-13 2024-01-27]

2024-01-27T08:16:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7677408278 # 61
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
* notice: last 14d: unq all: 6 4141
* notice: prev accum: outdated-unq outdated-all / unq all: 1891 182229 / 1920 186424
* notice: next accum: outdated-unq outdated-all / unq all: 1891 182229 / 1922 186536
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2024-01-13 2024-01-27]

2024-01-27T01:04:00Z: