@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-28T01:09:24Z",
-  "count" : 223,
+  "timestamp" : "2024-01-28T08:18:15Z",
+  "count" : 132,
   "count_minmax" : [ 111, 298 ],
-  "count_decinc" : [ -75, +298 ],
+  "count_decinc" : [ -166, +298 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
