@@ -1,10 +1,10 @@
 {
-  "count": 4124,
+  "count": 4145,
   "uniques": 7,
   "clones": [
     {
       "timestamp": "2024-01-14T00:00:00Z",
-      "count": 223,
+      "count": 132,
       "uniques": 1
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2024-01-27T00:00:00Z",
       "count": 302,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-01-28T00:00:00Z",
+      "count": 112,
+      "uniques": 2
     }
   ]
 }
