@@ -1,3 +1,12 @@
+2024-01-28T08:18:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7684465416 # 64
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
+* notice: last 14d: unq all: 7 4145
+* notice: prev accum: outdated-unq outdated-all / unq all: 1892 182527 / 1923 186726
+* notice: next accum: outdated-unq outdated-all / unq all: 1892 182527 / 1925 186838
+* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
+* notice: removed / changed dates: [] / [2024-01-14 2024-01-28]
+
 2024-01-28T01:09:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7682382955 # 63
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
